--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "mathjs": "^9.4.2",
     "morgan": "^1.10.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
